# csp-workflow-engine

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml
agents/: knowledge-guide.md
docs/: implementation_plan.md  phase3-implementation-plan.md  workflow-graph-implementation.md  workflow-review-report.md
generators/: claude-md.md
graph/: graph-layers.yaml  regulatory-graph.yaml  regulatory-patterns.yaml
hooks/: hooks-with-workflow.json  hooks.json
methodology/: agent self-memory should be architecturally separate from user knowledge systems.md  agent-cognition.md  build automatic memory through cognitive offloading and session handoffs.md  dense interlinked research claims enable derivation while sparse references only enable templating.md  design-dimensions.md  false universalism applies same processing logic regardless of domain.md  friction reveals architecture.md  implicit knowledge emerges from traversal.md  index.md  knowledge systems share universal operations and structural components across all methodology traditions.md  maintenance operations are more universal than creative pipelines because structural health is domain-invariant.md  notes are skills — curated knowledge injected when relevant.md  orchestrated vault creation transforms arscontexta from tool to autonomous knowledge factory.md  platform capability tiers determine which knowledge system features can be implemented.md  provenance tracks where beliefs come from.md  schema field names are the only domain specific element in the universal note pattern.md  (+3 more)
reference/: kernel.yaml  (+7 more)
(+283 files in other folders)
